further findbugs inspired tweaks
git-svn-id: http://192.168.1.10/repos/toto@2584 b53939d4-f08c-4181-96d4-b201aa9c61c4